SF Primes/src/objects/Account_ReLink__c.object
<CustomObject>
    <description>Used for moving records related to one account to another account</description>
    <fields>
        <fullName>Account_Updated__c</fullName>
        <formula>IF(Party_Account__r.Account_Number__c = Cobalt_Account_Number__c,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Updated?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_City__c</fullName>
        <label>Cobalt Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_Country__c</fullName>
        <label>Cobalt Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_Number__c</fullName>
        <label>Cobalt Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_Phone__c</fullName>
        <label>Cobalt Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_State__c</fullName>
        <label>Cobalt Account State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_Street__c</fullName>
        <label>Cobalt Account Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account_Zip_Code__c</fullName>
        <label>Cobalt Account Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cobalt Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Re-Links (Cobalt Account)</relationshipLabel>
        <relationshipName>Account_ReLinks_By_Cobalt_Account_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Errors__c</fullName>
        <label>Detail Errors</label>
        <summaryFilterItems>
            <field>Account_ReLink_Detail__c.Detail_Status__c</field>
            <operation>contains</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_ReLink_Detail__c.Account_ReLink__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Detail_Successes__c</fullName>
        <label>Detail Successes</label>
        <summaryFilterItems>
            <field>Account_ReLink_Detail__c.Detail_Status__c</field>
            <operation>contains</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_ReLink_Detail__c.Account_ReLink__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Details_Pending__c</fullName>
        <label>Details Pending</label>
        <summaryFilterItems>
            <field>Account_ReLink_Detail__c.Detail_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_ReLink_Detail__c.Account_ReLink__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Details_with_Inactive_Owners__c</fullName>
        <label>Details with Inactive Owners</label>
        <summaryFilterItems>
            <field>Account_ReLink_Detail__c.Owner_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_ReLink_Detail__c.Account_ReLink__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>IF(
    Total_Detail_Records__c = Detail_Successes__c,&quot;Complete&quot;,
    IF(
        Total_Detail_Records__c = Details_Pending__c,&quot;Unprocessed&quot;,
        IF(
            Detail_Errors__c &gt; 0,TEXT(Detail_Errors__c)&amp;&quot; Errors&quot;,
            IF(
                Details_Pending__c &gt; 0,TEXT(Details_Pending__c)&amp;&quot; Pending&quot;,&quot;Unknown&quot;
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account_City__c</fullName>
        <label>Party Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account_Country__c</fullName>
        <label>Party Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account_Phone__c</fullName>
        <label>Party Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Party_Account_State__c</fullName>
        <label>Party Account State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account_Street__c</fullName>
        <label>Party Account Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account_Zip_Code__c</fullName>
        <label>Party Account Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Re-Links</relationshipLabel>
        <relationshipName>Account_ReLinks_By_PartyID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <label>Party ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relink_Date__c</fullName>
        <label>Relink Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Account Re-Links</relationshipLabel>
        <relationshipName>Account_Re_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Detail_Records__c</fullName>
        <label>Total Detail Records</label>
        <summaryForeignKey>Account_ReLink_Detail__c.Account_ReLink__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Account Re-Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Overall_Status__c</columns>
        <columns>NAME</columns>
        <columns>Cobalt_Account__c</columns>
        <columns>Cobalt_Account_City__c</columns>
        <columns>Party_Account__c</columns>
        <columns>Party_Account_City__c</columns>
        <columns>Detail_Errors__c</columns>
        <columns>Detail_Successes__c</columns>
        <columns>Details_Pending__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_This_Year</fullName>
        <columns>Overall_Status__c</columns>
        <columns>NAME</columns>
        <columns>Cobalt_Account__c</columns>
        <columns>Cobalt_Account_City__c</columns>
        <columns>Party_Account__c</columns>
        <columns>Party_Account_City__c</columns>
        <columns>Detail_Errors__c</columns>
        <columns>Detail_Successes__c</columns>
        <columns>Details_Pending__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>Created This Year</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARL-{000000}</displayFormat>
        <label>Account Relink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Re-Links</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>